--- a/notebooks/1A_JNT_collection_and_inspection.ipynb
+++ b/notebooks/1A_JNT_collection_and_inspection.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## 1. Data wrangling\n",
     "\n",
-    "This notebook contains the steps to prepare the dataset for the modelling process. These include:\n",
+    "This notebook contains the steps 1 and 2 to prepare the dataset for the modelling process:\n",
     "1. Data collection \n",
     "2. Analysis and profiling\n",
     "3. Quality check assesment\n",
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Firstly, it is necerssary to import the necessary packages"
+    "The first step is importing the necessary packages"
    ]
   },
   {
@@ -29,14 +29,9 @@
    "source": [
     "# Import the required packages\n",
     "\n",
-    "import os\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import missingno as msno\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -71,7 +66,7 @@
    "source": [
     "# Import original dataset and load it into a dataframe\n",
     "\n",
-    "file = 'C:/Users/javie/OneDrive/Documents/springboard_projects/Capstone_2 - tests/listing_project/recs2015_public_v4.csv'\n",
+    "file = 'C:/Users/javie/OneDrive/Documents/springboard_projects/Capstone-2/data/raw/recs2015_public_v4.csv'\n",
     "\n",
     "df = pd.read_csv(file, index_col=None)"
    ]
@@ -211,7 +206,7 @@
     {
      "data": {
       "text/plain": [
-       "(5686, 38)"
+       "(5686, 36)"
       ]
      },
      "execution_count": 6,
@@ -264,12 +259,12 @@
        "      <th>DOLELCOL</th>\n",
        "      <th>DOLLAREL</th>\n",
        "      <th>...</th>\n",
+       "      <th>STORIES</th>\n",
        "      <th>SWIMPOOL</th>\n",
        "      <th>TOTALDOLSPH</th>\n",
        "      <th>TOTSQFT_EN</th>\n",
        "      <th>TOTROOMS</th>\n",
        "      <th>TYPEHUQ</th>\n",
-       "      <th>USESOLAR</th>\n",
        "      <th>WALLTYPE</th>\n",
        "      <th>YEARMADERANGE</th>\n",
        "      <th>DOLELLGT</th>\n",
@@ -290,12 +285,12 @@
        "      <td>365.46</td>\n",
        "      <td>967.23</td>\n",
        "      <td>...</td>\n",
+       "      <td>20</td>\n",
        "      <td>0</td>\n",
        "      <td>176.59</td>\n",
        "      <td>1808</td>\n",
        "      <td>7</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>7</td>\n",
        "      <td>75.18</td>\n",
@@ -314,12 +309,12 @@
        "      <td>249.54</td>\n",
        "      <td>1366.00</td>\n",
        "      <td>...</td>\n",
+       "      <td>10</td>\n",
        "      <td>0</td>\n",
        "      <td>380.52</td>\n",
        "      <td>759</td>\n",
        "      <td>4</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>5</td>\n",
        "      <td>124.51</td>\n",
@@ -338,12 +333,12 @@
        "      <td>844.63</td>\n",
        "      <td>2428.08</td>\n",
        "      <td>...</td>\n",
+       "      <td>10</td>\n",
        "      <td>0</td>\n",
        "      <td>601.17</td>\n",
        "      <td>2288</td>\n",
        "      <td>9</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>4</td>\n",
        "      <td>113.33</td>\n",
@@ -362,12 +357,12 @@
        "      <td>471.13</td>\n",
        "      <td>1313.12</td>\n",
        "      <td>...</td>\n",
+       "      <td>10</td>\n",
        "      <td>0</td>\n",
        "      <td>863.46</td>\n",
        "      <td>2573</td>\n",
        "      <td>7</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>64.58</td>\n",
@@ -386,12 +381,12 @@
        "      <td>62.05</td>\n",
        "      <td>581.07</td>\n",
        "      <td>...</td>\n",
+       "      <td>20</td>\n",
        "      <td>0</td>\n",
        "      <td>67.87</td>\n",
        "      <td>1024</td>\n",
        "      <td>6</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>112.65</td>\n",
@@ -399,7 +394,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 38 columns</p>\n",
+       "<p>5 rows × 36 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -410,21 +405,21 @@
        "3      0        -2        1         3     1327   1374       1         1   \n",
        "4      1         0        0         3      871    993       1         1   \n",
        "\n",
-       "   DOLELCOL  DOLLAREL  ...  SWIMPOOL  TOTALDOLSPH  TOTSQFT_EN  TOTROOMS  \\\n",
-       "0    365.46    967.23  ...         0       176.59        1808         7   \n",
-       "1    249.54   1366.00  ...         0       380.52         759         4   \n",
-       "2    844.63   2428.08  ...         0       601.17        2288         9   \n",
-       "3    471.13   1313.12  ...         0       863.46        2573         7   \n",
-       "4     62.05    581.07  ...         0        67.87        1024         6   \n",
+       "   DOLELCOL  DOLLAREL  ...  STORIES  SWIMPOOL  TOTALDOLSPH  TOTSQFT_EN  \\\n",
+       "0    365.46    967.23  ...       20         0       176.59        1808   \n",
+       "1    249.54   1366.00  ...       10         0       380.52         759   \n",
+       "2    844.63   2428.08  ...       10         0       601.17        2288   \n",
+       "3    471.13   1313.12  ...       10         0       863.46        2573   \n",
+       "4     62.05    581.07  ...       20         0        67.87        1024   \n",
        "\n",
-       "   TYPEHUQ  USESOLAR WALLTYPE  YEARMADERANGE  DOLELLGT  TOTALDOLWTH  \n",
-       "0        2         0        4              7     75.18       248.33  \n",
-       "1        2         0        3              5    124.51       234.49  \n",
-       "2        2         0        2              4    113.33       250.71  \n",
-       "3        2         0        3              2     64.58       114.62  \n",
-       "4        2         0        1              4    112.65       220.26  \n",
+       "   TOTROOMS  TYPEHUQ WALLTYPE  YEARMADERANGE  DOLELLGT  TOTALDOLWTH  \n",
+       "0         7        2        4              7     75.18       248.33  \n",
+       "1         4        2        3              5    124.51       234.49  \n",
+       "2         9        2        2              4    113.33       250.71  \n",
+       "3         7        2        3              2     64.58       114.62  \n",
+       "4         6        2        1              4    112.65       220.26  \n",
        "\n",
-       "[5 rows x 38 columns]"
+       "[5 rows x 36 columns]"
       ]
      },
      "execution_count": 7,
@@ -450,7 +445,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -459,7 +454,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 5686 entries, 0 to 5685\n",
-      "Data columns (total 38 columns):\n",
+      "Data columns (total 36 columns):\n",
       " #   Column            Non-Null Count  Dtype  \n",
       "---  ------            --------------  -----  \n",
       " 0   ATTIC             5686 non-null   int64  \n",
@@ -488,19 +483,17 @@
       " 23  RECBATH           5686 non-null   int64  \n",
       " 24  ROOFTYPE          5686 non-null   int64  \n",
       " 25  SIZEOFGARAGE      5686 non-null   int64  \n",
-      " 26  SOLWATER          5686 non-null   int64  \n",
-      " 27  STORIES           5686 non-null   int64  \n",
-      " 28  SWIMPOOL          5686 non-null   int64  \n",
-      " 29  TOTALDOLSPH       5686 non-null   float64\n",
-      " 30  TOTSQFT_EN        5686 non-null   int64  \n",
-      " 31  TOTROOMS          5686 non-null   int64  \n",
-      " 32  TYPEHUQ           5686 non-null   int64  \n",
-      " 33  USESOLAR          5686 non-null   int64  \n",
-      " 34  WALLTYPE          5686 non-null   int64  \n",
-      " 35  YEARMADERANGE     5686 non-null   int64  \n",
-      " 36  DOLELLGT          5686 non-null   float64\n",
-      " 37  TOTALDOLWTH       5686 non-null   float64\n",
-      "dtypes: float64(5), int64(32), object(1)\n",
+      " 26  STORIES           5686 non-null   int64  \n",
+      " 27  SWIMPOOL          5686 non-null   int64  \n",
+      " 28  TOTALDOLSPH       5686 non-null   float64\n",
+      " 29  TOTSQFT_EN        5686 non-null   int64  \n",
+      " 30  TOTROOMS          5686 non-null   int64  \n",
+      " 31  TYPEHUQ           5686 non-null   int64  \n",
+      " 32  WALLTYPE          5686 non-null   int64  \n",
+      " 33  YEARMADERANGE     5686 non-null   int64  \n",
+      " 34  DOLELLGT          5686 non-null   float64\n",
+      " 35  TOTALDOLWTH       5686 non-null   float64\n",
+      "dtypes: float64(5), int64(30), object(1)\n",
       "memory usage: 1.6+ MB\n"
      ]
     }
@@ -966,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1118,9 +1111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1165,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1346,13 +1339,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Writing df dataframe to csv\n",
     "\n",
-    "path = 'C:/Users/javie/OneDrive/Documents/springboard_projects/Capstone_2 - tests/listing_project/pre-selected.csv'\n",
+    "path = 'C:/Users/javie/OneDrive/Documents/springboard_projects/Capstone-2/data/interim/pre-selected.csv'\n",
     "\n",
     "df.to_csv(path)"
    ]
